<resources>
    <string name="app_name">G-Group</string>
    <string name="AboutEleven">G-Group</string>
    <string name="Shares">Акции</string>
    <string name="SharesTheme">Заголовок акций</string>
    <string name="FavoriteClient">Любимый клиент</string>
    <string name="Menu">Меню</string>
    <string name="event">События</string>
    <string name="my_event">Мои события</string>
    <string name="AboutGovorova">"Одесса, ул. Маршала Говорова 10/2","Горячие Перцы − это возможность окунутся в атмосферу американского пивного ресторана, в котором можно попробовать популярные блюда американской кухни."</string>
    <string name="About_us">О нас</string>
    <string name="Delivery">Доставка</string>
    <string name="about_us_part1">Ресторанная компания G-Group была основана в 2012 году. Первым проектом стал lounge restaurant GNEZDO.</string>
    <string name="about_us_part2">G-Group – динамично развивающаяся ресторанная компания. На сегодняшний день G-Group состоит из 8 ресторанов, из которых 7 находятся в Одессе и один в г. Черноморск. Помимо развития собственной сети, наша компания предоставляет услуги ресторанного консалтинга и продажи Франшиз.</string>
    <string name="e_mail">email: info@g-group.com.ua</string>
    <string name="NumberCard">НОМЕР КАРТЫ</string>
    <string name="Password">ПАРОЛЬ</string>
    <string name="EnterProfile">ВОЙТИ В ЛИЧНЫЙ КАБИНЕТ</string>
    <string name="reg">РЕГИСТРАЦИЯ</string>
    <string name="NewPass">ВОСТАНОВИТЬ ПАРОЛЬ</string>
    <string name="MobileNumber">НОМЕР МОБИЛЬНОГО</string>
    <string name="FIO">ФИО</string>
    <string name="GetCard">ГДЕ ХОТИТЕ ЗАБРАТЬ КАРТУ</string>
    <string name="BirthDay">ДАТА РОЖДЕНИЯ</string>
    <string name="RegistProfile">ЗАРЕГЕСТРИРОВАТЬ ПРОФИЛЬ</string>
    <string name="Gender">ПОЛ</string>
    <string name="Male">Мужской</string>
    <string name="Female">Женский</string>
    <string name="Agree">Я согласен(а) принимать Email и SMS рассылки о акциях, скидках, бонусах.</string>
    <string name="EditProfile">РЕДАКТИРОВАТЬ ПРОФИЛЬ</string>
    <string name="Phone">ТЕЛЕФОН</string>
    <string name="Email">EMAIL</string>
    <string name="Sort">Сортировать</string>
    <string name="OnAccount">по счетам</string>
    <string name="OnDate">по дате</string>
    <string name="Time">время</string>
    <string name="Cost">сумма, грн</string>
    <string name="Date">дата</string>
    <string name="TypeInCard">Тип:</string>
    <string name="BalanceInCard">Баланс:</string>
    <string name="TransactionTime">период транзакций</string>
    <string name="On">по</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cost_example">50 usd</string>
    <string name="name_dish">Дог с Уолл стрит</string>
    <string name="consist">Consist</string>
    <string name="weight_dish">260 грм</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="Today">СЕГОДНЯ</string>
    <string name="ShareTop">Заголовок акции</string>
    <string name="Save">Напомнить</string>
    <string name="testTextShare">Гости вечера группа LIME с программой «Свежевыжатая Музыка» 😎 Резерв столов 7777-550. Вход свободный 😉🎉Гости вечера группа LIME с программой «Свежевыжатая Музыка» 😎 Резерв столов 7777-550. Вход свободный 😉🎉Гости вечера группа LIME с программой «Свежевыжатая Музыка» 😎 Резерв столов 7777-550. Вход свободный 😉🎉</string>
    <string name="nameEvent">Название</string>
    <string name="TestEvent">Гости вечера группа LIME с программой «Свежевыжатая Музыка» 😎 Резерв столов 7777-550. Вход свободный 😉🎉</string>
    <string name="title_activity_share">ShareActivity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Order">Оформить заказ</string>
    <string name="pick_image_intent_text">test</string>
    <string name="pick_image_intent">Выберите фото</string>
    <string name="AlMezze">Al Mezze</string>
    <string name="AlMezzeAdress">Одесса, ул. Екатерининская 10</string>
    <string name="AlMezzeAbout">Современная кухня Ближнего Востока, которая объединила в себе самые популярные блюда Ливана, Израиля и Марокко.</string>
    <string name="AlMezzeURL">http://g-group.com.ua/restaurants/al-mezze/</string>
    <string name="CorolevaName"><![CDATA[<<Горячие перцы>> на Королева]]></string>
    <string name="CorolevaAdress">Одесса, ул. Ак. Королева 60/1</string>
    <string name="CorolevaAbout">\"Горячие Перцы\" на Королева − первый ресторан этой сети.   \"Горячие Перцы\" − это возможность окунутся в атмосферу американского пивного ресторана, в котором можно попробовать популярные блюда американской кухни. В меню также представлен большой выбор мясных блюд и разнообразных пивных закусок.  Меню бара состоит из более чем 8 сортов разливного пива от лучших украинских и зарубежных пивных кампаний, а также крафтового пива украинских производителей. Коктейльная карта включает в себя американскую классику и оригинальные пивные коктейли. Для наших маленьких гостей предусмотрено детское меню.   Мы всегда активны: мероприятия, живая музыка, DJ\'s, драйвовая атмосфера.   Мясо, Пиво, Rock\'n\'Roll</string>
    <string name="CorolevaURL">http://g-group.com.ua/restaurants/goryachie-pertsy/</string>
    <string name="GovorovaName">«Горячие Перцы» на Маршала Говорова</string>
    <string name="GovorovaAdress">Одесса, ул. Маршала Говорова 10/2</string>
    <string name="GovorovaAbout">\"Горячие Перцы\" − это возможность окунутся в атмосферу американского пивного ресторана, в котором можно попробовать популярные блюда американской кухни. В меню также представлен большой выбор мясных блюд и разнообразных пивных закусок.  Меню бара состоит из более чем 8 сортов разливного пива от лучших украинских и зарубежных пивных кампаний, а также крафтового пива украинских производителей. Коктейльная карта включает в себя американскую классику и оригинальные пивные коктейли. Для наших маленьких гостей предусмотрено детское меню.  \"Горячие Перцы\" на Маршала Говорова самый большой ресторан в сети \"Горячие Перцы\", где вас ждут: два этажа, большая барная стойка, банкетный зал, детская комната, большой экран для просмотра спортивных событий.   Мы всегда активны: мероприятия, живая музыка, DJ\'s, драйвовая атмосфера.   Мясо, Пиво, Rock\'n\'Roll</string>
    <string name="GovorovaURL">http://g-group.com.ua/restaurants/goryachie-pertsy-na-marshala-govorova/</string>
    <string name="ElevenDogsName">Eleven Dogs</string>
    <string name="ElevenDogsAdress">Одесса, ул. Гаванная 11</string>
    <string name="ElevenDogsAbout">Гастробар \"Eleven Dogs\" расположен в самом центре Одессы. Особенностью гастробара являются авторские хот-доги и коктейли.   Меню \"Eleven Dogs\" состоит из 11 авторских хот-догов, каждый из которых приготовлен по уникальной рецептуре. Также в меню присутствуют закуски, салаты, супы и основные блюда. Разработкой меню занимался Бренд-Шеф сети Виктор Титов. Коктейльная карта включает себя как лучшую мировую классику, так и авторские коктейли от нашего Шеф-Бармена.   По выходным играют DJ\'s, проходят вечеринки, а также иногда можно попасть на лекцию о барной культуре, либо на гостевой бартендинг.</string>
    <string name="ElevenDogsURL">http://g-group.com.ua/restaurants/eleven-dogs/</string>
    <string name="KinzaName">Kinza</string>
    <string name="KinzaAdress">Одесса, ул. Дерибасовская 31</string>
    <string name="KinzaAbout">Ресторан \"Kinza\" расположен в самом центре Одессы, в пешеходной зоне улицы Дерибасовская.   \"Kinza\" – это первый современный грузинский ресторан в Одессе.   Меню состоит из традиционных грузинских закусок, салатов, супов, хинкали, хачапури, большого выбора мясных и рыбных блюд, а также десертов. Все мясные блюда нашего ресторана готовятся на открытом огне, а хачапури запекается в дровяной печи в самом центре ресторана на глазах у гостей. Широкий ассортимент блюд прийдется по вкусу как любителю мяса, так и вегетарианцам.   В меню бара представлен широкий ассортимент грузинских вин различных производителей, традиционная грузинская чача, а также большой выбор грузинских лимонадов собственного приготовления.   В летнее время работает терраса с видом на Городской Сад.</string>
    <string name="KinzaURL">http://g-group.com.ua/restaurants/kinza/</string>
    <string name="ChernomorskName">Горячие Перцы | Черноморск</string>
    <string name="ChernomorskAdress">Черноморск (Ильичёвск): Ул. Школьная, 17</string>
    <string name="ChernomorskAbout">\"Горячие Перцы\" − это возможность окунутся в атмосферу американского пивного ресторана, в котором можно попробовать популярные блюда американской кухни. В меню также представлен большой выбор мясных блюд и разнообразных пивных закусок.  Меню бара состоит из более чем 8 сортов разливного пива от лучших украинских и зарубежных пивных кампаний, а также крафтового пива украинских производителей. Коктейльная карта включает в себя американскую классику и оригинальные пивные коктейли. Для наших маленьких гостей предусмотрено детское меню.   \"Горячие Перцы\" в г. Черноморске расположены в парковой зоне. В летнее время работает большая терраса, которая окутана деревьями и зеленью. Также на ней есть детская площадка.  Мы всегда активны: мероприятия, живая музыка, DJ\'s, драйвовая атмосфера.   Мясо, Пиво, Rock\'n\'Roll</string>
    <string name="ChernomorskURL">http://g-group.com.ua/restaurants/goryachie-pertsy-chernomorsk/</string>
    <string name="ElevenDogsFB">https://www.facebook.com/pg/elevendogs11/about/?ref=page_internal</string>
    <string name="KinzaFB">https://www.facebook.com/kinzaodessa/?fref=ts</string>
    <string name="GovorovaFB">https://www.facebook.com/pages/%D0%93%D0%BE%D1%80%D1%8F%D1%87%D0%B8%D0%B5-%D0%9F%D0%B5%D1%80%D1%86%D1%8B-%D0%93%D0%BE%D0%B2%D0%BE%D1%80%D0%BE%D0%B2%D0%B0/683554031807303?fref=ts</string>
    <string name="ChernomorskFB">https://www.facebook.com/pages/%D0%93%D0%BE%D1%80%D1%8F%D1%87%D0%B8%D0%B5-%D0%9F%D0%B5%D1%80%D1%86%D1%8B-%D0%98%D0%BB%D1%8C%D0%B8%D1%87%D0%B5%D0%B2%D1%81%D0%BA/472772182876449?fref=ts</string>
    <string name="CorolevaFB">https://www.facebook.com/hotpeppersod/?fref=ts</string>
    <string name="AlMezzeFB">https://www.facebook.com/ALMEZZE/?fref=ts</string>
    <string name="All">Все</string>
    <string name="your_order">Ваш заказ:</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="recall">Перезванивать для подтверждения</string>
    <string name="SendSms">Отправлять смс со статусами</string>
    <string name="address">Адрес доставки</string>
    <string name="OnTime">На время</string>
    <string name="RightNow">На сейчас</string>

    <!--SplashActivity-->
    <string name="internet_alert">Включите интернет</string>
    <string name="server_alert">Сервер не отвечает. Попробуйте позже!</string>
    <string name="connection_alert">Нет соединения!</string>

</resources>
