<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oleynikov.hp.ggroup.activity.RegistrationActivity">

    <ImageButton
        android:id="@+id/imageButtonBackInLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/back" />

    <ImageButton
        android:id="@+id/imageButtonPhotoPicker"
        android:layout_width="165dp"
        android:layout_height="192dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:background="#d8d8d8"
        android:paddingBottom="60dp"
        android:paddingTop="60dp"
        app:srcCompat="@drawable/ic_photo_camera_black_24px" />

    <ScrollView
        android:id="@+id/scrollViewRegistr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButtonPhotoPicker"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextPhoneNumber"
                style="@style/EditTextStyle"
                android:ems="10"
                android:hint="@string/MobileNumber"
                android:inputType="phone"
                android:textColorHint="@color/cardview_light_background" />

            <EditText
                android:id="@+id/editTextFullName"
                style="@style/EditTextStyle"
                android:ems="10"
                android:hint="@string/FIO"
                android:inputType="textPersonName"
                android:textColorHint="@color/cardview_light_background" />

            <EditText
                android:id="@+id/editTextGetCard"
                style="@style/EditTextStyle"
                android:ems="10"
                android:hint="@string/GetCard"
                android:inputType="textPersonName"
                android:textColorHint="@color/cardview_light_background" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/EditTextStyle"
                android:ems="10"
                android:hint="EMAIL "
                android:inputType="textEmailAddress"
                android:textColorHint="@color/cardview_light_background" />

            <EditText
                android:id="@+id/editTextBirthDay"
                style="@style/EditTextStyle"
                android:ems="10"
                android:hint="@string/BirthDay"
                android:inputType="numberSigned"
                android:textColorHint="@color/cardview_light_background" />

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="10dp"
                android:text="@string/Gender"
                android:textSize="10sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_weight="1"
                    android:text="@string/Male"
                    android:textSize="10sp" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Female"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:background="#9e9e9f"
                android:orientation="horizontal" />

            <RadioButton
                android:id="@+id/radioButtonAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginTop="10dp"
                android:text="@string/Agree"
                android:textSize="10sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:background="@drawable/button_bg_transparent"
            android:text="@string/RegistProfile"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>
