<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context="com.oleynikov.hp.ggroup.activity.LogoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/g_group_logo_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextNumberCard"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:hint="@string/NumberCard"
            android:inputType="textPersonName"
            android:textColorHint="@color/cardview_light_background" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:hint="@string/Password"
            android:inputType="textPersonName"
            android:textColorHint="@color/cardview_light_background" />

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/button_bg_transparent"
            android:text="@string/EnterProfile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonViewReg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/reg" />

            <Button
                android:id="@+id/buttonViewNewPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/NewPass" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
