<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.oleynikov.hp.g_group.activity.RegistrationActivity">

    <RelativeLayout
        android:id="@+id/relativeWithPhotoPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imageButtonPhotoPickerEdit"
            android:layout_width="165dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:background="#d8d8d8"
            android:paddingBottom="60dp"
            android:paddingTop="60dp"
            app:srcCompat="@drawable/ic_photo_camera_black_24px"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"/>

        <ImageButton
            android:id="@+id/imageButtonBackInProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/back"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_below="@+id/relativeWithPhotoPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewFullNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="68dp"
                android:text="@string/FIO"
                android:textSize="10sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/editTextFullNameEdit"
                style="@style/EditTextRegist"
                android:ems="10"
                android:inputType="textPersonName"

                />

            <TextView
                android:textSize="10sp"
                android:id="@+id/textBirthDayEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="68dp"
                android:text="@string/BirthDay"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextBirthDayEdit"
                style="@style/EditTextRegist"
                android:ems="10"
                android:inputType="textPersonName"
                />
            <TextView
                android:textSize="10sp"
                android:id="@+id/textViewGenderEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="68dp"
                android:text="@string/Gender"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextGetCard"
                style="@style/EditTextRegist"
                android:ems="10"
                android:inputType="textPersonName"
                />
            <TextView
                android:textSize="10sp"
                android:id="@+id/textViewNumberEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="68dp"
                android:text="@string/Phone"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextGenderEdit"
                style="@style/EditTextRegist"
                android:ems="10"
                android:inputType="textPersonName"
                />
            <TextView
                android:textSize="10sp"
                android:id="@+id/textViewEmailEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="68dp"
                android:text="@string/Email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEMailEdit"
                style="@style/EditTextRegist"
                android:ems="10"
                android:inputType="textPersonName"
                />


        </LinearLayout>
    </ScrollView>


    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonEditProfile"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_3"
        android:text="@string/EditProfile"
        android:layout_marginBottom="5dp"/>

</RelativeLayout>
