<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="36dp"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="36dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@android:color/background_light">

            <TextView
                android:id="@+id/textViewDateTransaction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:paddingLeft="24dp"
                android:textColor="#4a4a4a"
                android:text="@string/Date" />

            <TextView
                android:id="@+id/textViewTimeTransaction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.13"
                android:gravity="center|left"
                android:textColor="#4a4a4a"
                android:text="@string/Time" />

            <TextView
                android:id="@+id/textViewCostTransaction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:paddingRight="24dp"
                android:textColor="#4a4a4a"
                android:text="@string/Cost" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@android:color/background_dark"
            android:gravity="bottom"
            android:orientation="horizontal"></LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>